@@ -35,6 +35,8 @@ Version 7.0.1
   - added ID3Tag::PictureType
   - fixed bug in Drawable::blendPixel
   - added compare operators to class grafix::Point
+  - migrated PythonHelper from ppl6 and added unit tests for Perl- and
+    PythonHelper. Fixed escaping of backslash. 
 
 Version 7.0.0 vom 29.07.2018 (Repo-Tag: REL_7_0_0)
   - Complete Rewrite, based on Version 6.4.7
